@@ -12,6 +12,7 @@ DarkRP 2.3.7 SVN
 [FIX] rp_enforcemodels 0 not working correctly
 [FIX] Unneccessary Database access on PlayerInitialSpawn(should save lag)
 [FIX] Name exploit.
+[FIX] People staying RP admin after having normal admin removed
 [CHANGE] Default shipments are now in addshipments.lua
 [CHANGE] Moved complicated code in shared.lua and addshipments.lua to MakeThings.lua
 [CHANGE] Changed filename of addshipments.lua to addentities.lua
